# proteinshake_models

./: .gitignore  README.md  atom_test.py  debug.py  pyproject.toml  requirements.txt  submit.sh
config/: config.yaml  pretrain.yaml  profiler.yaml
config/best_model/: binding_site_detection_graph.yaml  binding_site_detection_voxel.yaml  enzyme_class_graph.yaml  enzyme_class_point_cloud.yaml  gene_ontology_point_cloud.yaml  ligand_affinity_graph.yaml  protein_protein_interface_graph.yaml  protein_protein_interface_point_cloud.yaml  protein_protein_interface_voxel.yaml  structural_class_voxel.yaml  structure_similarity_graph.yaml  structure_similarity_point_cloud.yaml  structure_similarity_voxel.yaml
config/debug/: default.yaml  pretrain.yaml
config/model/: gnn.yaml  graph.yaml  point_cloud.yaml  point_net.yaml  voxel.yaml  voxel_net.yaml
datasets/: atom3d_data.py
experiments/: pretrain_mask_residues.py  train.py
figures/: 1_Representation_Random.md  1_Representation_Random.tex  1_Representation_Random.txt  1_Representation_Sequence.md  1_Representation_Sequence.tex  1_Representation_Sequence.txt  1_Representation_Structure.md  1_Representation_Structure.tex  1_Representation_Structure.txt  plot.py  results.csv
gnn_experiments/: metrics.py  models.py  pretrain_mask_nodes.py  train.py  train_atom3d.py  train_pair.py  utils.py
job_scripts/: get_results.py  get_runtime.py  submit_finetune.sh  submit_train.sh
old/: README.md
old/src/: train.py  (+2 more)
proteinshake_eval/: data_utils.py  metrics.py  utils.py
scripts/: get_training_info.py
src/: train.py  util.py
(+84 files in other folders)
